# AgentFramework

./: .gitattributes  .gitignore  .prettierignore  ARIA_LANGUAGE_SPEC.md  CHANGELOG.md  CLAUDE.md  CLAUDE.md.template  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE  NOTICE  ORCHESTRATOR.md  README.md  SECURITY.md  STAGE-PROMPT-PROTOCOL.md  TRADEMARKS.md  agent-runtime-spec.md  aria-start.bat  audit.toml  codecov.yml  deny.toml  eslint.config.js  index.html  lefthook.yml  my-idea.md  package-lock.json  package.json  playwright.config.ts  rust-toolchain.toml  tsconfig.json  vite.config.ts  vitest.config.ts  wdio.conf.ts
.aria/: CLAUDE.md  agent-runner.sh  aria-engine.sh  common.sh  context-refresh.sh  design-notes.md  design-notes.sh  discover.sh  git-ops.sh  hitl.sh  mode-enforcer.sh  model-selector.sh  pause.sh  project-context.md  rails-executor.sh  verify-executor.sh  verify.sh
.claude/: settings.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
crates/runtime-core/: Cargo.toml  README.md
crates/runtime-core/src/: cmd_error_ext.rs  drone.rs  error.rs  event.rs  ipc.rs  lib.rs  signal.rs
crates/runtime-core/tests/: ipc_constants.rs  round_trip.rs
crates/runtime-drone/: Cargo.toml  README.md
crates/runtime-drone/fuzz/: Cargo.toml
crates/runtime-drone/fuzz/corpus/drone_command_decode/: seed_graceful_shutdown.json  seed_revert_to_snapshot.json  seed_set_activity_timeout.json  seed_snapshot_now.json  seed_spawn_process.json  seed_stop_process.json
crates/runtime-drone/fuzz/fuzz_targets/: drone_command_decode.rs
crates/runtime-drone/migrations/: 000_initial.sql  001_plans_tasks.sql  002_mcp_servers.sql  003_mcp_server_status.sql
crates/runtime-drone/src/: command_handler.rs  db.rs  heartbeat.rs  ipc.rs  lib.rs  main.rs  plan_projector.rs  shutdown.rs  snapshot.rs  token_usage.rs  vdr.rs
crates/runtime-drone/tests/: integration.rs  integration_windows.rs  migration_runner.rs  token_usage_projector.rs  vdr_projection.rs
crates/runtime-main/: Cargo.toml  README.md
crates/runtime-main/src/: key_store.rs  lib.rs  path_confine.rs  stray_db_cleanup.rs
crates/runtime-main/src/audit/: entry.rs  error.rs  file_path.rs  mod.rs  writer.rs
crates/runtime-main/src/budget/: cost.rs  enforcer.rs  hook.rs  mod.rs
crates/runtime-main/src/builder/: error.rs  mod.rs  persist.rs  summary.rs  tester.rs  validate.rs
crates/runtime-main/src/capability/: declaration.rs  enforcer.rs  error.rs  mod.rs  narrowing.rs
crates/runtime-main/src/drone_ipc/: client.rs  connection.rs  mod.rs
crates/runtime-main/src/framework_loader/: capability_map.rs  error.rs  mod.rs  walker.rs
crates/runtime-main/src/hitl/: mod.rs  policy.rs  seam.rs
crates/runtime-main/src/hitl/notifiers/: desktop.rs  mod.rs  sound.rs  terminal_bell.rs
crates/runtime-main/src/hooks/: dont_touch.rs  executor.rs  mod.rs  rails.rs  shell.rs
crates/runtime-main/src/import/: egress.rs  fetch.rs  mod.rs
crates/runtime-main/src/plan/: mod.rs  plan_loop.rs  state_machine.rs
crates/runtime-main/src/providers/: anthropic.rs  anthropic_sse.rs  mod.rs  retry.rs  stream_guard.rs
crates/runtime-main/src/recovery/: mod.rs  resume.rs  uncertainty.rs
crates/runtime-main/src/sandbox_ipc/: client.rs  connection.rs  mod.rs
crates/runtime-main/src/sdk/: agent_sdk.rs  approval.rs  builtin_tools.rs  decision_extractor.rs  event_pipeline.rs  load_skill.rs  mcp_dispatch.rs  mod.rs  replay.rs  request_capability.rs  structured_emitter.rs
crates/runtime-main/src/skills_lock/: error.rs  mod.rs
crates/runtime-main/src/tier/: error.rs  evaluator.rs  matrix.rs  mod.rs  persistence.rs  transition.rs
crates/runtime-main/tests/: agent_with_tools_loop.rs  anthropic_smoke.rs  anthropic_wiremock.rs  audit_smoke.rs  budget_live.rs  budget_runloop_execution.rs  budget_threshold.rs  builder.rs  builtin_tool_execution.rs  capability_enforcer_smoke.rs  capability_live_tool.rs  drone_ipc_loopback.rs  drone_oversize_frame.rs  drone_reconnect_events.rs  framework_load_resolution.rs  framework_loader_smoke.rs  framework_save_resplit.rs  gap_detection_execution.rs  gap_detection_live.rs  hitl_failure_escalation.rs  hook_integration.rs  import_pipeline_integration.rs  mcp_dispatch_runloop.rs  mcp_dispatch_wire.rs  mcp_tool_injection_execution.rs  path_confine.rs  plan_lifecycle.rs  plan_loop.rs  plan_recovery.rs  provider_resilience.rs  provider_retry_policy.rs  provider_stall_suspend.rs  recovery_lifecycle.rs  sdk_cancellation.rs  sdk_capability_integration.rs  sdk_event_translation.rs  sdk_narrowing_integration.rs  sdk_replay.rs  skill_load_execution.rs  skill_load_live.rs  (+5 more)
crates/runtime-main/tests/common/: mod.rs
crates/runtime-mcp/: Cargo.toml
crates/runtime-mcp/src/: dispatch.rs  error.rs  lib.rs
crates/runtime-mcp/src/client/: auth.rs  auth_keyring.rs  connection_resolver.rs  error.rs  lifecycle.rs  mod.rs  registry.rs
crates/runtime-mcp/src/namespace/: aliases.rs  mod.rs
crates/runtime-mcp/src/transport/: http.rs  mock.rs  mod.rs  stdio.rs
crates/runtime-mcp/tests/: auth.rs  client_lifecycle.rs  connection_resolver.rs  integration.rs  mcp_add_with_path_args.rs  mcp_dispatch_integration.rs  mcp_npx_cmd_quoting.rs  namespace_resolution.rs  registry.rs
crates/runtime-sandbox/: Cargo.toml
crates/runtime-sandbox/src/: error.rs  ipc.rs  job_objects.rs  landlock.rs  lib.rs  main.rs  protocol.rs  seccomp.rs  validator.rs
crates/runtime-sandbox/tests/: integration.rs
crates/xtask/: Cargo.toml  README.md
crates/xtask/src/: lib.rs  main.rs
crates/xtask/tests/: check_drift.rs
docs/: BUILD-PROMPT-architecture.md  BUILD-PROMPT-milestones.md  BUILD-SPEC-TEMPLATE.md  DESIGN-DECISIONS.md  M04-irl-test-plan.md  M06-irl-findings.md  M06-irl-test-plan.md  M07-irl-findings.md  M08-irl-findings.md  M08-irl-test-plan.md  M08.6-irl-findings.md  M08.6-irl-test-plan.md  MVP-v0.1.md  SECURITY.md  (+22 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  drone_lifecycle.rs  main.rs  sandbox_lifecycle.rs  session_db.rs
(+600 files in other folders)
