[workspace]
resolver = "2"
members = [
    "crates/runtime-core",
    "crates/runtime-main",
    "crates/runtime-drone",
    "crates/runtime-sandbox",
    "crates/xtask",
    "src-tauri",
]

[workspace.package]
version      = "0.1.0"
edition      = "2021"
license      = "Apache-2.0"
repository   = "https://github.com/kknipe2k/AgentFramework"
rust-version = "1.80"

[workspace.dependencies]
serde       = { version = "1.0", default-features = false }
serde_json  = "1.0"
serde_yaml  = "0.9"
thiserror   = "1.0"
proptest    = "1.4"
tokio       = { version = "1.40", default-features = false }
tokio-util  = { version = "0.7", default-features = false }
rusqlite    = { version = "0.32", default-features = false }
sha2        = "0.10"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", default-features = false }
clap        = { version = "4.5", default-features = false }
uuid        = { version = "1.10", default-features = false }
futures     = "0.3"
bytes       = "1.7"
tempfile    = "3.12"

# M02 Stage B — LLM provider deps. Versions confirmed against crates.io as
# of 2026-05. Pin here; member crates pull via `dep = { workspace = true }`.
reqwest             = { version = "0.13", default-features = false, features = ["rustls", "rustls-native-certs", "json", "stream"] }
eventsource-stream  = "0.2"
async-trait         = "0.1"
secrecy             = { version = "0.10", features = ["serde"] }
keyring             = "3.6"

# M02 Stage C — wiremock for provider integration tests.
# Latest 0.6.x; takes the http-1.x types compatible with reqwest 0.13.
wiremock            = "0.6"

# runtime-core path-dep for runtime-main + future provider consumers.
# Version pin avoids the cargo-deny wildcard rule.
runtime-core        = { path = "crates/runtime-core", version = "0.1.0" }

[workspace.lints.rust]
unsafe_code = "forbid"
warnings    = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
