[workspace]
resolver = "2"
members = [
    "crates/runtime-core",
    "crates/runtime-main",
    "crates/runtime-drone",
    "crates/runtime-sandbox",
    "crates/runtime-mcp",
    "crates/xtask",
    "src-tauri",
]

[workspace.package]
version      = "0.1.0"
edition      = "2021"
license      = "Apache-2.0"
repository   = "https://github.com/kknipe2k/AgentFramework"
rust-version = "1.80"

[workspace.dependencies]
serde       = { version = "1.0", default-features = false }
serde_json  = "1.0"
serde_yaml  = "0.9"
thiserror   = "1.0"
proptest    = "1.4"
tokio       = { version = "1.40", default-features = false }
tokio-util  = { version = "0.7", default-features = false }
rusqlite    = { version = "0.32", default-features = false }
sha2        = "0.10"
base64      = { version = "0.22", default-features = false, features = ["std"] }
tracing     = "0.1"
tracing-subscriber = { version = "0.3", default-features = false }
clap        = { version = "4.5", default-features = false }
uuid        = { version = "1.10", default-features = false }
futures     = "0.3"
bytes       = "1.7"
tempfile    = "3.12"

# M02 Stage B — LLM provider deps. Versions confirmed against crates.io as
# of 2026-05. Pin here; member crates pull via `dep = { workspace = true }`.
# NOTE (M06.B): the `rustls-native-certs` feature was removed from reqwest
# 0.13.2+ (replaced by the `rustls` feature's built-in
# `rustls-platform-verifier`, which loads native certs + delegates to OS
# verification on Windows/macOS/Linux). M06.B's rmcp 1.7.0 dep pins
# reqwest to ^0.13.2 which forced this update. No behavioral change on
# Windows + macOS (platform-verifier supersedes the explicit
# native-certs feature); on Linux the platform-verifier uses
# rustls-native-certs internally under the hood.
reqwest             = { version = "0.13", default-features = false, features = ["rustls", "json", "stream"] }
eventsource-stream  = "0.2"
async-trait         = "0.1"
secrecy             = "0.10"
# keyring 3.x ships NO platform backend by default — bare `keyring = "3.6"`
# compiles fine but uses a stub that silently succeeds on writes and returns
# `NoEntry` on reads. M02 Stage E hit this in dev: "Save key ✓" then
# `setup_required` on the smoke test. Per docs/gotchas.md #29.
# Three features cover all v0.1 + v1.0 OS targets:
#   apple-native            — macOS Keychain Services
#   windows-native          — Windows Credential Manager
#   sync-secret-service     — Linux Secret Service via D-Bus (sync API)
keyring             = { version = "3.6", default-features = false, features = ["apple-native", "windows-native", "sync-secret-service"] }

# M02 Stage C — wiremock for provider integration tests.
# Latest 0.6.x; takes the http-1.x types compatible with reqwest 0.13.
wiremock            = "0.6"

# M04 Stage D — globset-backed don't-touch matcher (spec §4a). 0.4.x ships
# `GlobBuilder::case_insensitive` + `GlobSet::matches` returning matched
# pattern indices for pattern-recovery on hard-rail emit.
globset             = "0.4"

# M04 Stage E — Tauri 2.x notification plugin for the `desktop` HITL
# notifier (spec §6a). 2.x matches the Tauri 2 baseline pinned in
# src-tauri/Cargo.toml. Per docs/gotchas.md #32 cross-stack discipline:
# install + capability + permission API verified against
# https://v2.tauri.app/plugin/notification/ at 2026-05-10.
tauri-plugin-notification = "2"

# runtime-core path-dep for runtime-main + future provider consumers.
# Version pin avoids the cargo-deny wildcard rule.
runtime-core        = { path = "crates/runtime-core", version = "0.1.0" }
# runtime-drone path-dep for runtime-main integration tests that need
# the drone-side `snapshot::recover_session_state` helper (M04 Stage B
# plan_recovery.rs). Production callsites stay decoupled through IPC;
# this is dev-only.
runtime-drone       = { path = "crates/runtime-drone", version = "0.1.0" }
# runtime-sandbox path-dep for runtime-main's sandbox_ipc client (M05 C1).
# Production callsites stay decoupled through IPC; this dependency is
# strictly so runtime-main can import the wire-format types
# (SandboxRequest / SandboxResponse / ValidationResult) defined in the
# sandbox crate. Stage C2 adds OS-isolation deps inside runtime-sandbox
# itself; the runtime-main consumer side stays unchanged.
runtime-sandbox     = { path = "crates/runtime-sandbox", version = "0.1.0" }
# runtime-main path-dep for runtime-mcp (M06 Stage C). runtime-mcp consumes
# the runtime-main `audit::AuditWriter` + `audit::entry::*` constructors so
# McpClient lifecycle emissions land in the same `skills.audit.jsonl` as
# capability + tier audit lines. Forward-only edge: runtime-main does NOT
# depend on runtime-mcp — Tauri shell bridges the two.
runtime-main        = { path = "crates/runtime-main", version = "0.1.0" }

# M05 Stage C2 — Linux OS isolation primitives. Both crates ship via
# crates.io with MIT / Apache-2.0 licenses; libseccomp dynamically links
# against the system libseccomp v2.5+ (build dep installed on CI Linux
# runners via apt `libseccomp-dev`). The crates are pulled only by
# runtime-sandbox via `[target.'cfg(target_os = "linux")'.dependencies]`
# — Windows + macOS builds don't see them.
libseccomp          = { version = "0.3", default-features = false }
landlock            = { version = "0.4", default-features = false }

# M05 Stage C2 — Windows Job Objects FFI. `windows-sys` is already in
# the Cargo.lock transitively (via tokio + tauri); pinning here gates
# runtime-sandbox's job_objects.rs to a known version with the
# Win32_System_JobObjects feature. The `multiple-versions = "warn"`
# lint in deny.toml may surface other windows-sys versions; that's an
# existing transitive landscape, not C2-specific.
windows-sys         = { version = "0.59", default-features = false }

# M06 Stage B — rmcp 1.7.0 (the official Rust SDK for the Model Context
# Protocol; modelcontextprotocol/rust-sdk). Pinned via the runtime-mcp
# crate per the §5 protocol-boundary convention; runtime-main never
# depends on rmcp directly (the boundary is `runtime-mcp::transport`).
# Feature selection (corrected at authoring time per WEBCHECK; phase-doc
# B.3.1 drift noted in M06.B-retrospective):
#   client                                       — client-role traits
#   transport-child-process                      — TokioChildProcess (stdio
#                                                  via subprocess); the
#                                                  phase doc said
#                                                  `transport-io` which
#                                                  is the server-side
#                                                  stdin/stdout helper.
#   transport-streamable-http-client-reqwest     — StreamableHttpClientTransport
#                                                  (remote HTTP per MCP
#                                                  2025-11-25)
#   reqwest                                      — alias enabling
#                                                  reqwest?/rustls so the
#                                                  http transport ships
#                                                  with rustls TLS (matches
#                                                  the M02 workspace
#                                                  reqwest pin)
# `default-features = false` keeps the dep tree minimal (no `server`,
# no `macros`, no `base64` defaults).
rmcp                = { version = "1.7", default-features = false, features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest", "reqwest"] }
runtime-mcp         = { path = "crates/runtime-mcp", version = "0.1.0" }

[workspace.lints.rust]
unsafe_code = "forbid"
warnings    = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
