[package]
name         = "agent-runtime"
version      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
rust-version = "1.85"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri              = { version = "2", features = [] }
runtime-core       = { workspace = true }
runtime-main       = { path = "../crates/runtime-main", version = "0.1.0" }
async-trait        = { workspace = true }
futures            = { workspace = true }
serde              = { workspace = true, features = ["derive"] }
serde_json         = { workspace = true }
thiserror          = { workspace = true }
tokio              = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }

[dev-dependencies]
# Used by commands.rs::tests to construct keyring::Error variants for the
# `set_api_key_with` error-path tests (mirrors the dev-dep choice in
# crates/runtime-main/Cargo.toml).
keyring            = { workspace = true }

[lints]
workspace = true
