[package]
name         = "agent-runtime"
version      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
rust-version = "1.85"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri              = { version = "2", features = [] }
# M04 Stage E — Tauri 2.x notification plugin for the `desktop` HITL
# notifier (spec §6a). Wired through `runtime_main::hitl::notifiers::desktop`
# via a Tauri-side dispatcher closure (gotcha #32 cross-stack discipline).
tauri-plugin-notification = { workspace = true }
# M08 Stage C — Tauri 2.x dialog plugin powering the local-file picker
# (`pickLocalArtifactFile` in src/lib/ipc.ts). Registered via
# `.plugin(tauri_plugin_dialog::init())`; permission granted in
# src-tauri/capabilities/default.json `dialog:allow-open`.
tauri-plugin-dialog = { workspace = true }
runtime-core       = { workspace = true }
runtime-main       = { path = "../crates/runtime-main", version = "0.1.0" }
# M06.C — Tauri shell holds the McpClient + KeyringSecretStore; constructs
# at app startup with the AuditWriter wired (when present) so MCP
# install/uninstall/auth events land in the same skills.audit.jsonl as
# capability + tier audit lines (M05.E precedent).
runtime-mcp        = { path = "../crates/runtime-mcp", version = "0.1.0" }
async-trait        = { workspace = true }
futures            = { workspace = true }
serde              = { workspace = true, features = ["derive"] }
serde_json         = { workspace = true }
thiserror          = { workspace = true }
tokio              = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "process", "time", "io-util", "fs"] }
uuid               = { workspace = true, features = ["v4"] }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }

[dev-dependencies]
# Used by commands.rs::tests to construct keyring::Error variants for the
# `set_api_key_with` error-path tests (mirrors the dev-dep choice in
# crates/runtime-main/Cargo.toml).
keyring            = { workspace = true }
# M05 Stage D — tempdir for the tier-transition persistence tests
# (`request_tier_transition_with_*`). Same workspace dep as the other
# crates use for filesystem-isolation tests.
tempfile           = { workspace = true }
# M08 Stage F1 — the `test-helpers` feature exposes `MockTransport` so the
# `connect_test_session_mcp` tests drive a concrete `McpDispatcher`
# without a live MCP server (mirrors crates/runtime-main's dev-dep
# choice). `runtime-mcp` is already a normal dependency above; this entry
# only enables the test-only feature for dev/test builds.
runtime-mcp        = { path = "../crates/runtime-mcp", features = ["test-helpers"] }

[lints]
workspace = true
