[package]
name         = "runtime-drone"
version      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
rust-version = { workspace = true }

[[bin]]
name = "runtime-drone"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
runtime-core       = { path = "../runtime-core", version = "0.1.0" }
serde              = { workspace = true, features = ["derive"] }
serde_json         = { workspace = true }
thiserror          = { workspace = true }
tokio              = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time", "signal", "net", "io-util", "fs", "process"] }
tokio-util         = { workspace = true, features = ["codec"] }
rusqlite           = { workspace = true, features = ["bundled"] }
sha2               = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "json"] }
clap               = { workspace = true, features = ["derive", "std", "help"] }
uuid               = { workspace = true, features = ["v4"] }
futures            = { workspace = true }
bytes              = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
tokio    = { workspace = true, features = ["test-util", "rt-multi-thread", "macros", "sync", "time", "signal", "net", "io-util", "fs", "process"] }

[target.'cfg(unix)'.dev-dependencies]
nix = { version = "0.29", features = ["signal"] }
