[package]
name         = "runtime-main"
version      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
rust-version = { workspace = true }

[lints]
workspace = true

[dependencies]
runtime-core       = { workspace = true }
async-trait        = { workspace = true }
bytes              = { workspace = true }
futures            = { workspace = true }
reqwest            = { workspace = true }
eventsource-stream = { workspace = true }
secrecy            = { workspace = true }
keyring            = { workspace = true }
serde              = { workspace = true, features = ["derive"] }
serde_json         = { workspace = true }
tokio              = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time", "net", "io-util", "process"] }
tokio-util         = { workspace = true, features = ["codec"] }
uuid               = { workspace = true, features = ["v4", "serde"] }
thiserror          = { workspace = true }
tracing            = { workspace = true }

[dev-dependencies]
tokio              = { workspace = true, features = ["test-util", "macros", "rt-multi-thread", "net", "io-util", "process"] }
proptest           = { workspace = true }
wiremock           = { workspace = true }
tempfile           = { workspace = true }
rusqlite           = { workspace = true, features = ["bundled"] }
runtime-drone      = { workspace = true }
uuid               = { workspace = true, features = ["v4", "serde"] }

[features]
default     = []
integration = []
