[package]
name         = "runtime-main"
version      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
rust-version = { workspace = true }

[lints]
workspace = true

[dependencies]
runtime-core       = { workspace = true }
runtime-sandbox    = { workspace = true }
async-trait        = { workspace = true }
bytes              = { workspace = true }
futures            = { workspace = true }
reqwest            = { workspace = true }
eventsource-stream = { workspace = true }
secrecy            = { workspace = true }
keyring            = { workspace = true }
serde              = { workspace = true, features = ["derive"] }
serde_json         = { workspace = true }
sha2               = { workspace = true }
base64             = { workspace = true }
tokio              = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time", "net", "io-util", "process"] }
tokio-util         = { workspace = true, features = ["codec"] }
uuid               = { workspace = true, features = ["v4", "serde"] }
chrono             = { version = "0.4", default-features = false, features = ["serde", "clock", "std"] }
thiserror          = { workspace = true }
tracing            = { workspace = true }
globset            = { workspace = true }

[dev-dependencies]
tokio              = { workspace = true, features = ["test-util", "macros", "rt-multi-thread", "net", "io-util", "process"] }
proptest           = { workspace = true }
wiremock           = { workspace = true }
tempfile           = { workspace = true }
rusqlite           = { workspace = true, features = ["bundled"] }
runtime-drone      = { workspace = true }
uuid               = { workspace = true, features = ["v4", "serde"] }
async-trait        = { workspace = true }
chrono             = { version = "0.4", default-features = false, features = ["serde"] }

[features]
default     = []
integration = []
