[package]
name         = "runtime-main"
version      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
rust-version = { workspace = true }

[lints]
workspace = true

[dependencies]
runtime-core       = { workspace = true }
runtime-sandbox    = { workspace = true }
async-trait        = { workspace = true }
bytes              = { workspace = true }
futures            = { workspace = true }
reqwest            = { workspace = true }
eventsource-stream = { workspace = true }
secrecy            = { workspace = true }
keyring            = { workspace = true }
serde              = { workspace = true, features = ["derive"] }
serde_json         = { workspace = true }
sha2               = { workspace = true }
base64             = { workspace = true }
tokio              = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time", "net", "io-util", "process"] }
tokio-util         = { workspace = true, features = ["codec"] }
uuid               = { workspace = true, features = ["v4", "serde"] }
chrono             = { version = "0.4", default-features = false, features = ["serde", "clock", "std"] }
thiserror          = { workspace = true }
tracing            = { workspace = true }
globset            = { workspace = true }

[dev-dependencies]
tokio              = { workspace = true, features = ["test-util", "macros", "rt-multi-thread", "net", "io-util", "process"] }
proptest           = { workspace = true }
wiremock           = { workspace = true }
tempfile           = { workspace = true }
rusqlite           = { workspace = true, features = ["bundled"] }
# Safe env-var mutation for tests under workspace `forbid(unsafe_code)`.
# Wraps the post-rustc-1.84 `unsafe` `std::env::set_var` / `remove_var`
# in a callback API and serializes concurrent test calls internally
# (M08.5.5 Stage A.fix — read_api_key env-var override coverage).
temp-env           = "0.3"
runtime-drone      = { workspace = true }
# Dev-only cycle (runtime-mcp normal-deps runtime-main; Cargo permits
# dev-dependency cycles). The M07.D2 assembled regression drives the
# CONCRETE McpDispatcher (not a mock seam) per the M06.5 / gotcha #66
# mandate, so it needs runtime-mcp's MockTransport test helper.
runtime-mcp        = { workspace = true, features = ["test-helpers"] }
uuid               = { workspace = true, features = ["v4", "serde"] }
async-trait        = { workspace = true }
chrono             = { version = "0.4", default-features = false, features = ["serde"] }

[features]
default     = []
integration = []
