[package]
name         = "xtask"
version      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
rust-version = { workspace = true }

[lints]
workspace = true

[dependencies]
anyhow      = "1.0"
clap        = { version = "4", features = ["derive"] }
schemars    = "0.8"
serde       = { workspace = true, features = ["derive"] }
serde_json  = { workspace = true }
typify      = "0.6"

[dev-dependencies]
tempfile = { workspace = true }
